// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic arguments > should render help message for empty args 1`] = `
"Fast JavaScript/TypeScript bundler in Rust with Rollup-compatible API. (rolldown VERSION)

USAGE rolldown -c <config> or rolldown <input> <options>

OPTIONS

  --config -c, <filename>     Path to the config file (default: \`rolldown.config.js\`).
  --dir -d, <dir>             Output directory, defaults to \`dist\` if \`file\` is not set.
  --external -e, <external>   Comma-separated list of module ids to exclude from the bundle \`<module-id>,...\`.
  --format -f, <format>       Output format of the generated bundle (supports esm, cjs, and iife).
  --globals -g, <globals>     Global variable of UMD / IIFE dependencies (syntax: \`key=value\`).
  --help -h,                  Show help.
  --minify -m,                Minify the bundled file.
  --name -n, <name>           Name for UMD / IIFE format outputs.
  --file -o, <file>           Single output file.
  --platform -p, <platform>   Platform for which the code should be generated (node, browser, neutral).
  --sourcemap -s, <sourcemap> Generate sourcemap (\`-s inline\` for inline, or pass the \`-s\` on the last argument if you want to generate \`.map\` file).
  --version -v,               Show version number.
  --watch -w,                 Watch files in bundle and rebuild on changes.
  --advanced-chunks.min-share-count <advanced-chunks.min-share-count>Minimum share count of the chunk.
  --advanced-chunks.min-size <advanced-chunks.min-size>Minimum size of the chunk.
  --asset-file-names <name>   Name pattern for asset files.
  --banner <banner>           Code to insert the top of the bundled file (outside the wrapper function).
  --checks.circular-dependency Whether to emit warning when detecting circular dependency.
  --checks.common-js-variable-in-esm Whether to emit warning when detecting common js variable in esm.
  --checks.configuration-field-conflict Whether to emit warning when detecting configuration field conflict.
  --checks.empty-import-meta  Whether to emit warning when detecting empty import meta.
  --checks.eval               Whether to emit warning when detecting eval.
  --checks.filename-conflict  Whether to emit warning when detecting filename conflict.
  --checks.import-is-undefined Whether to emit warning when detecting import is undefined.
  --checks.missing-global-name Whether to emit warning when detecting missing global name.
  --checks.missing-name-option-for-iife-export Whether to emit warning when detecting missing name option for iife export.
  --checks.mixed-export       Whether to emit warning when detecting mixed export.
  --checks.unresolved-entry   Whether to emit warning when detecting unresolved entry.
  --checks.unresolved-import  Whether to emit warning when detecting unresolved import.
  --chunk-file-names <name>   Name pattern for emitted secondary chunks.
  --context <context>         The entity top-level \`this\` represents.
  --css-chunk-file-names <css-chunk-file-names>Name pattern for emitted css secondary chunks.
  --css-entry-file-names <css-entry-file-names>Name pattern for emitted css entry chunks.
  --cwd <cwd>                 Current working directory.
  --debug.session-id <debug.session-id>Used to name the build.
  --define <define>           Define global variables.
  --drop-labels <drop-labels> Remove labeled statements with these label names.
  --entry-file-names <name>   Name pattern for emitted entry chunks.
  --es-module                 Always generate \`__esModule\` marks in non-ESM formats, defaults to \`if-default-prop\` (use \`--no-esModule\` to always disable).
  --exports <exports>         Specify a export mode (auto, named, default, none).
  --extend                    Extend global variable defined by name in IIFE / UMD formats.
  --footer <footer>           Code to insert the bottom of the bundled file (outside the wrapper function).
  --hash-characters <hash-characters>Use the specified character set for file hashes.
  --inject <inject>           Inject import statements on demand.
  --inline-dynamic-imports    Inline dynamic imports.
  --input <input>             Entry file.
  --intro <intro>             Code to insert the top of the bundled file (inside the wrapper function).
  --jsx <jsx>                 Jsx options preset.
  --keep-names                Keep function/class name.
  --legal-comments <legal-comments>Control comments in the output.
  --log-level <log-level>     Log level (silent, info, debug, warn).
  --make-absolute-externals-relative Prevent normalization of external imports.
  --minify-internal-exports   Minify internal exports.
  --module-types <types>      Module types for customized extensions.
  --no-external-live-bindings Disable external live bindings.
  --no-preserve-entry-signatures Avoid facade chunks for entry points.
  --no-treeshake              Disable treeshaking.
  --optimization.inline-const Enable crossmodule constant inlining.
  --optimization.pife-for-module-wrappers Use PIFE pattern for module wrappers.
  --outro <outro>             Code to insert the bottom of the bundled file (inside the wrapper function).
  --polyfill-require          Disable require polyfill injection.
  --preserve-modules          Preserve module structure.
  --preserve-modules-root <preserve-modules-root>Put preserved modules under this path at root level.
  --sanitize-file-name        Sanitize file name.
  --shim-missing-exports      Create shim variables for missing exports.
  --sourcemap-base-url <sourcemap-base-url>Base URL used to prefix sourcemap paths.
  --sourcemap-debug-ids       Inject sourcemap debug IDs.
  --transform.assumptions.ignore-function-length .
  --transform.assumptions.no-document-all .
  --transform.assumptions.object-rest-no-symbols .
  --transform.assumptions.pure-getters .
  --transform.assumptions.set-public-class-fields .
  --transform.decorators.emit-decorator-metadata .
  --transform.decorators.legacy .
  --transform.helpers.mode <transform.helpers.mode>.
  --transform.jsx.development Development specific information.
  --transform.jsx.import-source <transform.jsx.import-source>Import the factory of element and fragment if mode is classic.
  --transform.jsx.pragma <transform.jsx.pragma>Jsx element transformation.
  --transform.jsx.pragma-flag <transform.jsx.pragma-flag>Jsx fragment transformation.
  --transform.jsx.refresh     Enable react fast refresh.
  --transform.jsx.runtime <transform.jsx.runtime>Which runtime to use.
  --transform.jsx.throw-if-namespace <transform.jsx.throw-if-namespace>Toggles whether to throw an error when a tag name uses an XML namespace.
  --transform.target <transform.target>The JavaScript target environment.
  --transform.typescript.allow-declare-fields .
  --transform.typescript.allow-namespaces .
  --transform.typescript.declaration.sourcemap .
  --transform.typescript.declaration.strip-internal .
  --transform.typescript.jsx-pragma <transform.typescript.jsx-pragma>.
  --transform.typescript.jsx-pragma-frag <transform.typescript.jsx-pragma-frag>.
  --transform.typescript.only-remove-type-imports .
  --transform.typescript.rewrite-import-extensions <transform.typescript.rewrite-import-extensions>.
  --virtual-dirname <virtual-dirname>.

EXAMPLES

  1. Bundle with a config file \`rolldown.config.mjs\`:
    rolldown -c rolldown.config.mjs

  2. Bundle the \`src/main.ts\` to \`dist\` with \`cjs\` format:
    rolldown src/main.ts -d dist -f cjs

  3. Bundle the \`src/main.ts\` and handle the \`.png\` assets to Data URL:
    rolldown src/main.ts -d dist --moduleTypes .png=dataurl

  4. Bundle the \`src/main.tsx\` and minify the output with sourcemap:
    rolldown src/main.tsx -d dist -m -s

  5. Create self-executing IIFE using external jQuery as \`$\` and \`_\`:
    rolldown src/main.ts -d dist -n bundle -f iife -e jQuery,window._ -g jQuery=$

NOTES

  * Due to the API limitation, you need to pass \`-s\` for \`.map\` sourcemap file as the last argument.
  * If you are using the configuration, please pass the \`-c\` as the last argument if you ignore the default configuration file.
  * CLI options will override the configuration file.
  * For more information, please visit https://rolldown.rs/."
`;

exports[`cli options for bundling > cli default options 1`] = `
"input cli default options {
  input: 'index.js',
  plugins: [
    {
      name: 'test-input-plugin',
      options: [Function: options],
      outputOptions: [Function: outputOptions]
    }
  ]
}
output cli default options {}
<DIR>/index.js  chunk │ size: 0.13 kB

"
`;

exports[`cli options for bundling > should handle \`--input\` and positional args as entries 1`] = `
"
|→ 1.js:

//#region 1.ts
console.log("1");

//#endregion

|→ 2.js:

//#region 2.js
console.log("2");

//#endregion"
`;

exports[`cli options for bundling > should handle negative boolean options 1`] = `
"(function(exports, node_fs) {

//#region rolldown:runtime
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {
		key = keys[i];
		if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", {
	value: mod,
	enumerable: true
}) : target, mod));

//#endregion
node_fs = __toESM(node_fs);

//#region index.ts
const nonExternal = "nonExternal";

//#endregion
exports.nonExternal = nonExternal;
exports.read = node_fs.read;
exports.readFile = node_fs.readFile;
exports.readFileSync = node_fs.readFileSync;
exports.readSync = node_fs.readSync;
return exports;
})({}, node_fs);"
`;

exports[`cli options for bundling > should handle pass \`-s\` options 1`] = `
"<DIR>/index.js.map  asset │ size: 0.21 kB
<DIR>/index.js      chunk │ size: 0.19 kB

"
`;

exports[`cli options for bundling > should handle single array options 1`] = `
"<DIR>/index.js  chunk │ size: 0.14 kB

"
`;

exports[`cli options for bundling > should handle single boolean option 1`] = `
"<DIR>/index.js  chunk │ size: 0.04 kB

"
`;

exports[`cli options for bundling > should handle single boolean short options 1`] = `
"<DIR>/index.js  chunk │ size: 0.04 kB

"
`;

exports[`cli options for bundling > should handle single object options 1`] = `
"<DIR>/index.js  chunk │ size: 0.27 kB

"
`;

exports[`cli options for bundling > should handle single string options 1`] = `
"<DIR>/index.js  chunk │ size: 0.13 kB

"
`;

exports[`cli options for bundling > validate cli options 1`] = `
"Command failed with exit code 1: rolldown index.ts --format INCORRECT

Invalid value for option format: Invalid type: Expected ("es" | "cjs" | "esm" | "module" | "commonjs" | "iife" | "umd") but received "INCORRECT". You can use \`rolldown -h\` to see the help."
`;

exports[`config > should allow loading cts config 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow loading mts config 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow loading ts config 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow loading ts config from non-working dir 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow loading ts config with oxnode 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow loading ts config with tsx 1`] = `
"<DIR>/index.js  chunk │ size: 0.11 kB

"
`;

exports[`config > should allow multiply options 1`] = `
"<DIR>/esm.js  chunk │ size: 0.14 kB
<DIR>/cjs.js  chunk │ size: 0.14 kB

"
`;

exports[`config > should allow multiply output + call options hook once  + call outputOptions hook 1`] = `
"called options hook
called output options hook
called output options hook
<DIR>/esm.js  chunk │ size: 0.18 kB
<DIR>/cjs.js  chunk │ size: 0.17 kB

"
`;

exports[`config > should allow multiply output 1`] = `
"<DIR>/esm.js  chunk │ size: 0.14 kB
<DIR>/cjs.js  chunk │ size: 0.14 kB

"
`;

exports[`config > should bundle in ext-js-syntax-cjs 1`] = `
"<DIR>/index.js  chunk │ size: 0.13 kB

"
`;

exports[`config > should resolve rolldown.config.cjs 1`] = `
"<DIR>/index.js  chunk │ size: 0.13 kB

"
`;

exports[`watch cli > should allow multiply output + call options hook once + call outputOptions hook 1`] = `
"called options hook
called output options hook
called output options hook
<DIR>/esm.js  chunk │ size: 0.18 kB
<DIR>/cjs.js  chunk │ size: 0.17 kB

"
`;

exports[`watch cli > should require both ROLLDOWN_WATCH and this.meta.watchMode to be false 1`] = `
"process.env.ROLLUP_WATCH undefined
process.env.ROLLDOWN_WATCH undefined
options called:
this.meta.watchMode false
process.env.ROLLUP_WATCH undefined
process.env.ROLLDOWN_WATCH undefined
onLog called:
this.meta.watchMode false
(test plugin) trigger onLog
buildStart called:
this.meta.watchMode false
closeBundle called:"
`;

exports[`watch cli > should require both ROLLDOWN_WATCH and this.meta.watchMode to be true 1`] = `
"process.env.ROLLUP_WATCH true
process.env.ROLLDOWN_WATCH true
Waiting for changes...
options called:
this.meta.watchMode true
process.env.ROLLUP_WATCH true
process.env.ROLLDOWN_WATCH true
onLog called:
this.meta.watchMode true
(test plugin) trigger onLog
buildStart called:
this.meta.watchMode true
closeBundle called:"
`;
